--- a/.env.example
+++ b/.env.example
@@ -10,14 +10,31 @@ DEFAULT_PROMPT_STYLE=artful
 # Whether to show the generated prompt to user in preview (true/false)
 SHOW_PROMPT_TO_USER=true
 
+# AI Provider - Options: 'huggingface', 'openai'
+AI_PROVIDER=huggingface
+
+# Hugging Face Configuration
 # Model to use for image generation - Use any compatible Hugging Face model
-IMAGE_MODEL=black-forest-labs/FLUX.1-dev
+HF_IMAGE_MODEL=black-forest-labs/FLUX.1-dev
+
+# Hugging Face API key - Get yours at https://huggingface.co/settings/tokens
+HF_API_KEY=your_api_key_here
+
+# OpenAI Configuration
+# Model for DALL-E image generation - Options: 'dall-e-3', 'dall-e-2'
+OPENAI_IMAGE_MODEL=dall-e-3
+
+# OpenAI API key - Get yours at https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Image quality for DALL-E-3 - Options: 'standard', 'hd'
+OPENAI_IMAGE_QUALITY=standard
+
+# Image size - Options: '1024x1024', '512x512', '256x256' (dall-e-2) or '1024x1024', '1792x1024', '1024x1792' (dall-e-3)
+OPENAI_IMAGE_SIZE=1024x1024
 
 # Maximum keywords to extract from message for prompt generation
 MAX_KEYWORDS_FROM_MESSAGE=5
-
-# Hugging Face API key - Get yours at https://huggingface.co/settings/tokens
-API_KEY=your_api_key_here
 
 # SQLite database path
 DB_PATH=cipher_stats.db
